Updates in Automations
Made changes in Time of day and quick access for the Integration.